--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -6,3 +6,20 @@
 .pending {
   color: black;
 }
+
+.list {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  width: 50vmin;
+}
+
+.icons {
+  display: flex;
+  justify-content: flex-end;
+}
+
+.title {
+  display: flex;
+  justify-content: flex-start;
+}
