--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -23,3 +23,9 @@
   display: flex;
   justify-content: flex-start;
 }
+
+.table {
+  display: flex;
+  align-items: center;
+  flex-direction: column;
+}
