implement groundwork for edit functionality

--- a/src/components/Todo.css
+++ b/src/components/Todo.css
@@ -29,3 +29,13 @@
   align-items: center;
   flex-direction: column;
 }
+
+
+.hidden {
+  display: none;
+  transition: 0.5s;
+}
+
+.title:hover ~ .hidden{
+  display: block;
+}
